# buddy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  buddy.example.toml
buddy-cli/: Cargo.toml
buddy-cli/src/: main.rs
buddy-core/: Cargo.toml
buddy-core/src/: config.rs  lib.rs  reload.rs  state.rs  store.rs  testutil.rs  types.rs
buddy-core/src/embedding/: mod.rs
buddy-core/src/memory/: mod.rs  sqlite.rs
buddy-core/src/provider/: gemini.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
buddy-core/src/skill/: fetch_url.rs  mod.rs  read_file.rs  recall.rs  remember.rs  working_memory.rs  write_file.rs  youtube_transcript.rs
buddy-server/: Cargo.toml
buddy-server/src/: api.rs  config.rs  main.rs  process.rs  reload.rs  store.rs  testutil.rs  types.rs  warning.rs
buddy-server/src/api/: auth.rs  chat.rs  config.rs  conversation.rs  embedder.rs  interfaces.rs  memory.rs  mod.rs  tests.rs
buddy-server/src/embedding/: local.rs  mod.rs
buddy-server/src/memory/: mod.rs  sqlite.rs
buddy-server/src/provider/: gemini.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
buddy-server/src/skill/: fetch_url.rs  mod.rs  read_file.rs  recall.rs  remember.rs  working_memory.rs  write_file.rs
buddy-telegram/: Cargo.toml
buddy-telegram/src/: adapter.rs  approval.rs  handler.rs  main.rs
buddy-whatsapp/: Cargo.toml
buddy-whatsapp/src/: adapter.rs  approval.rs  client.rs  conversation.rs  main.rs
design/: design.md
docs/: tools-skills-architecture.md  v0.6.md
docs/plans/: 2026-02-16-xss-sanitization-design.md  2026-02-16-xss-sanitization.md
features/00-templates/: amendments.template.md  idea.template.md  outcome.template.md  prd.template.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: ApprovalDialog.svelte  Chat.svelte  Interfaces.svelte  Login.svelte  Settings.svelte  Sidebar.svelte  ToolCallBlock.svelte  api.js  auth.test.js
frontend/src/lib/settings/: GeneralTab.svelte  ModelsTab.svelte  SkillsTab.svelte  ToolsTab.svelte
tasks/done/: 001-refactor-skill-trait-to-tool.md  002-create-skill-concept.md  003-split-settings-ui-tools-skills-tabs.md  004-classify-implementations-tools-vs-skills.md  005-wire-up-memory-tools-config.md  006-fix-memory-tools-config-bug.md  007-rename-skillsconfig-to-toolsconfig.md  008-update-frontend-toolsconfig.md  009-formalize-tool-framework.md  010-formalize-skill-framework.md  011-fix-ui-move-tools-out-of-skills-tab.md  012-remove-composite-skills-section.md  013-add-tool-approval-request-ui.md  F-20260305-001-youtube-tools__13__fix-video-id-extraction.md
versions/v0.1/: v0.1.md
versions/v0.1/tasks/backlog/: 001-project-scaffolding.md  002-core-message-types.md  003-configuration.md  004-provider-trait-and-openai-impl.md  005-http-websocket-api.md  006-chat-ui.md  007-end-to-end-integration.md
versions/v0.1/tasks/done/: 001-project-scaffolding.md  002-core-message-types.md  003-configuration.md  004-provider-trait-and-openai-impl.md  005-http-websocket-api.md  006-chat-ui.md  007-end-to-end-integration.md
versions/v0.2/: v0.2.md
versions/v0.2/tasks/backlog/: 009-built-in-skills-and-sandbox.md  010-tool-call-loop.md  011-sqlite-conversation-persistence.md  012-conversation-management-api.md  013-conversation-ui-and-tool-rendering.md  014-second-provider-implementation.md  015-end-to-end-integration.md
versions/v0.2/tasks/done/: 008-skill-trait-and-registry.md  009-built-in-skills-and-sandbox.md  (+8 more)
versions/v0.3/: v0.3.md
versions/v0.4/: v0.4.md
versions/v0.5/: embedding_design.md  v0.5.md
(+122 files in other folders)
