[package]
name = "buddy-core"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "5"
uuid = { version = "1", features = ["v4"] }
