[package]
name = "buddy-core"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "5"
uuid = { version = "1", features = ["v4"] }
arc-swap = "1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2"
