[package]
name = "buddy-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy-core = { path = "../buddy-core" }
clap = { version = "4", features = ["derive"] }
teloxide = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
futures-util = "0.3"
arc-swap = "1"
