[package]
name = "buddy-whatsapp"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy-core = { path = "../buddy-core" }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[dev-dependencies]
tower = "0.5"
